# mj_controller

./: CMakeLists.txt  README.md  actuators.json  package.xml
UR5+gripper/: UR5gripper.xml  UR5gripper_2_finger.xml  ur5.urdf.xacro
UR5+gripper/mesh/visual/: base_link.stl  drone.stl  socket.stl
src/: main.py
srv/: RegisterGroup.srv
